tests/data/input/invalid_files/missing_field.bc
[General]
    fileVersion           = 1.01
    fileType              = boundConds          

[forcing]
    name                  = Boundary1          
    function              = constant            
    time-interpolation    = linear  
    quantity              = waterlevelbnd         
    unit                  = m                   
    2.5 

[forcing]
    name                  = Boundary2          
    function              = constant            
    time-interpolation    = linear  
    unit                  = m³/s                
    100 

[forcing]
    name                  = Boundary3         
    function              = constant            
    time-interpolation    = linear  
    quantity              = waterlevelbnd         
    unit                  = m                   
    2.5